--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="header"></div>
-        <div class="left-side"></div>
-        <div class="body"></div>
-        <div class="right-side"></div>
-        <div class="footer"></div>
+        <div class="header">Header</div>
+        <div class="left-side">Side</div>
+        <div class="body">Body</div>
+        <div class="right-side">Side</div>
+        <div class="footer">Footer</div>
     </div>
 </body>
 </html>
